@@ -1,3 +1,7 @@
+##### Mon 22/10/2012
+* Begin to test using OpenCores RS decoder
+* VParser supports input/output/output reg definitions in port list.
+
 ##### Fri 19/10/2012
 * New command report_fsm 
       search and report the FSMs in this design    
